--- a/Views/Pet/Add.cshtml
+++ b/Views/Pet/Add.cshtml
@@ -6,27 +6,11 @@
 
 <div>
     <form asp-controller="Pet" asp-action="Add" method="post">
-        <h1>Add New Adoptable Dog</h1>
-        <label class="control-label" asp-for="PetName"></label>
-        <input class="form-control" asp-for="PetName" />
-<br>
-        <label class="control-label" asp-for="PetImgUrl"></label>
-        <input class="form-control" asp-for="PetImgUrl" />
-<br>
-        <label class="control-label" asp-for="PetDescription"></label>
-        <input class="form-control" asp-for="PetDescription" />
-<br>
-        <label class="control-label" asp-for="PetBreed"></label>
-        <input class="form-control" asp-for="PetBreed" />
-<br>
-        <label class="control-label" asp-for="PetAge"></label>
-        <input class="form-control" asp-for="PetAge" />
-<br>
-        <label class="control-label" asp-for="PetGender"></label>
-        <select asp-for="PetGender" class="form-control" asp-items="Html.GetEnumSelectList<Gender>()">
-        <option>Select Gender</option>
-        </select>
-<br>
+        
+        @await Html.PartialAsync("_PetInput", Model)
+
         <input type="submit" value="Save">
     </form>
+
+
 </div>
