--- a/Views/Pet/Edit.cshtml
+++ b/Views/Pet/Edit.cshtml
@@ -7,12 +7,20 @@
 <div>
     <form asp-controller="Pet" asp-action="Edit" method="post">
         <h1>Edit Pet Details</h1>
-        
+
         @await Html.PartialAsync("_PetInput", Model)
 
-        <input type="hidden" asp-for="PetId"/>
+        <input type="hidden" asp-for="PetId" />
 
         <div>
+            <a class="btn btn-sm btn-light mb-3" asp-controller="Pet" asp-action="List">
+                Back
+            </a>
+
+            <a class="btn btn-sm btn-light mb-3" asp-controller="Pet" asp-action="Delete" asp-route-id="@Model.PetId">
+                Delete
+            </a>
+
             <input type="submit" class="btn" value="Save">
         </div>
 
