--- a/Views/Pet/Detail.cshtml
+++ b/Views/Pet/Detail.cshtml
@@ -4,23 +4,26 @@
     ViewData["Title"] = "View Pet Details";
 }
 
-<div>
-    <h1>@Model.PetName</h1>
-    <img src="@Model.PetImgUrl" alt="@Model.PetName, @Model.PetBreed">
-    <p>@Model.PetAge</p>
-    <p>@Model.PetBreed</p>
-    <p>@Model.PetGender</p>
-    <p>@Model.PetDescription</p>
-    <div>
-        <a class="btn btn-sm btn-light mb-3" asp-controller="Pet" asp-action="List">
-            Back
-        </a>
-        
-        <a class="btn btn-sm btn-light mb-3" asp-controller="Pet" asp-action="Edit" asp-route-id="@Model.PetId">
-            Edit
-        </a>
-
+<div class="detail-wrapper container row">
+    <div class="col-4">
+        <img class="detail-img" src="@Model.PetImgUrl" alt="@Model.PetName, @Model.PetBreed">
     </div>
 
+    <div class="col-8">
+        <h1>@Model.PetName</h1>
+        <h4>@Model.PetGender  |  @Model.PetBreed  |  @Model.PetAge Years Old</h4>
+        <p>@Model.PetDescription</p>
+
+        <div>
+            <a class="btn btn-sm btn-secondary mb-3" asp-controller="Pet" asp-action="List">
+                Back
+            </a>
+            
+            <a class="btn btn-sm btn-primary mb-3" asp-controller="Pet" asp-action="Edit" asp-route-id="@Model.PetId">
+                Edit
+            </a>
+
+        </div>
+    </div>
 
 </div>
