--- a/Views/Pet/_PetInput.cshtml
+++ b/Views/Pet/_PetInput.cshtml
@@ -1,42 +1,55 @@
 @model midterm_project.Models.Pet
 
 <div class="form-group">
-    <div>
-        <label class="control-label" asp-for="PetName"></label>
-        <input class="form-control" asp-for="PetName" />
-        <span asp-validation-for="PetName"></span>
+    <div class="row mb-4">
+        <label class="control-label col-4" asp-for="PetName"></label>
+        <input class="form-control col-8 form-input" asp-for="PetName" />
+        <div class="col-12 text-danger d-flex justify-content-end">
+            <span asp-validation-for="PetName"></span>
+        </div>
+        
     </div>
 
-    <div>
-        <label class="control-label" asp-for="PetImgUrl"></label>
-        <input class="form-control" asp-for="PetImgUrl" />
-        <span asp-validation-for="PetImgUrl"></span>
+    <div class="row mb-4">
+        <label class="control-label col-4" asp-for="PetImgUrl"></label>
+        <input class="form-control col-8 form-input" asp-for="PetImgUrl" />
+        <div class="col-12 text-danger d-flex justify-content-end">
+            <span asp-validation-for="PetImgUrl"></span>
+        </div>
     </div>
    
-    <div>
-        <label class="control-label" asp-for="PetDescription"></label>  
-        <input class="form-control" asp-for="PetDescription" />
-        <span asp-validation-for="PetDescription"></span>
+    <div class="row mb-4">
+        <label class="control-label col-4" asp-for="PetDescription"></label>  
+        <textarea class="form-control col-8 form-input" asp-for="PetDescription"> </textarea>
+        <div class="col-12 text-danger d-flex justify-content-end">
+            <span asp-validation-for="PetDescription"></span>
+        </div>    
     </div>
     
-    <div>
-        <label class="control-label" asp-for="PetBreed"></label>
-        <input class="form-control" asp-for="PetBreed" />
-        <span asp-validation-for="PetBreed"></span>
+    <div class="row mb-4">
+        <label class="control-label col-4" asp-for="PetBreed"></label>
+        <input class="form-control col-8 form-input" asp-for="PetBreed" />
+        <div class="col-12 text-danger d-flex justify-content-end">
+            <span asp-validation-for="PetBreed"></span>
+        </div> 
     </div>
 
-    <div>
-        <label class="control-label" asp-for="PetAge"></label>
-        <input class="form-control" asp-for="PetAge" />
-        <span asp-validation-for="PetAge"></span>
+    <div class="row mb-4">
+        <label class="control-label col-4" asp-for="PetAge"></label>
+        <input class="form-control col-8 form-input" asp-for="PetAge" />
+        <div class="col-12 text-danger d-flex justify-content-end">
+            <span asp-validation-for="PetAge"></span>
+        </div> 
     </div>
 
-    <div>
-        <label class="control-label" asp-for="PetGender"></label>
-        <select asp-for="PetGender" class="form-control" asp-items="Html.GetEnumSelectList<Gender>()">
+    <div class="row mb-4">
+        <label class="control-label col-4" asp-for="PetGender"></label>
+        <select asp-for="PetGender" class="form-control col-8 form-input" asp-items="Html.GetEnumSelectList<Gender>()">
             <option>Select Gender</option>
         </select>
-        <span asp-validation-for="PetGender"></span>
+        <div class="col-12 text-danger d-flex justify-content-end">
+            <span asp-validation-for="PetGender"></span>
+        </div> 
     </div>
 
 </div>
