--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,15 +17,16 @@ body {
   margin-bottom: 60px;
 }
 
-/* .card-wrapper {
+.card-wrapper {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-} */
-
-.list-wrapper {
   border: 2px solid black;
+  padding: 0px;
+  margin: 3px;
 }
+
+
 
 .list-img {
   width: auto;
@@ -53,4 +54,44 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.text-div {
+  padding: 5px;
+}
+
+/* .list-card {
+  margin: 3px;
+} */
+
+.list-wrapper {
+  border: 2px solid gray;
+  border-radius: 3px;
+  padding: 0px;
+  max-width: 300px;
+  margin: 5px;
+}
+
+.form-group {
+  max-width: 600px;
+  margin: auto;
+}
+
+.form-wrapper {
+  max-width: 600px;
+  margin: auto;
+}
+
+.form-input {
+  max-width: 400px;
+}
+
+.detail-img {
+  max-width: 100%;
+  border-radius: 3px;
+}
+
+.detail-wrapper {
+  max-width: 1000px;
+  margin: auto;
 }
